ros2_ws/log/build_2024-10-07_19-40-56/opencv_test_py/stdout_stderr.log
running egg_info
writing ../../build/opencv_test_py/opencv_test_py.egg-info/PKG-INFO
writing dependency_links to ../../build/opencv_test_py/opencv_test_py.egg-info/dependency_links.txt
writing entry points to ../../build/opencv_test_py/opencv_test_py.egg-info/entry_points.txt
writing requirements to ../../build/opencv_test_py/opencv_test_py.egg-info/requires.txt
writing top-level names to ../../build/opencv_test_py/opencv_test_py.egg-info/top_level.txt
reading manifest file '../../build/opencv_test_py/opencv_test_py.egg-info/SOURCES.txt'
writing manifest file '../../build/opencv_test_py/opencv_test_py.egg-info/SOURCES.txt'
running build
running build_py
copying opencv_test_py/servo_control.py -> /home/swati/VBM/ros2_ws/build/opencv_test_py/build/lib/opencv_test_py
running install
running install_lib
copying /home/swati/VBM/ros2_ws/build/opencv_test_py/build/lib/opencv_test_py/servo_control.py -> /home/swati/VBM/ros2_ws/install/opencv_test_py/lib/python3.10/site-packages/opencv_test_py
byte-compiling /home/swati/VBM/ros2_ws/install/opencv_test_py/lib/python3.10/site-packages/opencv_test_py/servo_control.py to servo_control.cpython-310.pyc
  File "/home/swati/VBM/ros2_ws/install/opencv_test_py/lib/python3.10/site-packages/opencv_test_py/servo_control.py", line 45
    self.lambda = 1
         ^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/swati/VBM/ros2_ws/install/opencv_test_py/lib/python3.10/site-packages/opencv_test_py-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/opencv_test_py/opencv_test_py.egg-info to /home/swati/VBM/ros2_ws/install/opencv_test_py/lib/python3.10/site-packages/opencv_test_py-0.0.0-py3.10.egg-info
running install_scripts
Installing image_processor script to /home/swati/VBM/ros2_ws/install/opencv_test_py/lib/opencv_test_py
Installing servo_control script to /home/swati/VBM/ros2_ws/install/opencv_test_py/lib/opencv_test_py
writing list of installed files to '/home/swati/VBM/ros2_ws/build/opencv_test_py/install.log'
